fix errors in good html practices.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Zoo Problem Page</title>
 </head>
 <body>
-    <!-- This is the main header for this page to list all the animal species in the zoo.-->
-    <header title="Main header. Encapsulate header tags for zoo animals.">
+    <!-- This is the main section for this page to list all the animal species in the zoo.-->
+    <main title="Main tag. Encapsulate section tags for zoo animals.">
         <h1>List of All Zoo Animals</h1>
-        <!-- Bears header -->
-        <header>
+        <!-- Bears section -->
+        <section>
             <h2>Bears</h2>
             <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Ours_brun_parcanimalierpyrenees_1.jpg" alt="" width="220" >
             <!-- List of names of bears in zoo. -->
@@ -19,10 +19,10 @@
                 <li>Mona</li>
             </ul>
             <p>Bears Facts: The brown bear is the most widespread, with the most unique subspecies. They range from the compact European brown bears to even smaller Syrian bears to giant Kodiaks in Alaska. They're still all the same species, though, and can interbreed. They can also breed with black and polar bears. To learn more click <a href="https://en.wikipedia.org/wiki/Bear" target="_blank">here</a>.</p>
-        </header>
+        </section>
 
-        <!-- Giraffes header -->
-        <header>
+        <!-- Giraffes section -->
+        <section>
             <h2>Giraffes</h2>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Giraffe_Mikumi_National_Park.jpg/800px-Giraffe_Mikumi_National_Park.jpg" alt="" width="220" >
             <!-- List of names of giraffes in zoo. -->
@@ -31,10 +31,10 @@
                 <li>Coconut</li>
             </ul>
             <p>Giraffes Facts: The giraffe is the tallest mammal in the world. Even newborn giraffe are taller than most humans. Female giraffe give birth standing up. Their young fall about 2 m to the ground and can stand up within an hour of birth. To learn more click <a href="https://en.wikipedia.org/wiki/Giraffe" target="_blank">here</a>.</p>
-        </header>
+        </section>
 
-        <!-- Lions header -->
-        <header>
+        <!-- Lions section -->
+        <section>
             <h2>Lions</h2>
             <img src="https://upload.wikimedia.org/wikipedia/commons/7/73/Lion_waiting_in_Namibia.jpg" alt="" width="220" height="165">
             <!--List of names of lions in zoo. -->
@@ -43,10 +43,10 @@
                 <li>Karl</li>
             </ul>
             <p>Lions Facts: Lions are the only known cat species where individuals roar together - with even young cubs joining in with their mews. The calling sequence usually lasts about 40 seconds. A group of lions, also called 'a pride', often roar together to mark their territory - a roar can be heard from 5 miles away. To learn more click <a href="https://en.wikipedia.org/wiki/Lion" target="_blank">here</a>.</p>
-        </header>
+        </section>
 
-        <!-- Monkeys header -->
-        <header>
+        <!-- Monkeys section -->
+        <section>
             <h2>Monkeys</h2>
             <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Bonnet_macaque_%28Macaca_radiata%29_Photograph_By_Shantanu_Kuveskar.jpg" alt="" width="220">
             <!--List of names of monkeys in zoo. -->
@@ -57,10 +57,10 @@
             </ul>
             <p>Monkeys Facts:   
                 Monkeys are capable of recognizing themselves in mirrors, a behavior often associated with higher intelligence. Some species, like the rhesus macaque, have been observed using mirrors to examine parts of their body they normally can’t see, showing a level of self-awareness. To learn more click <a href="https://en.wikipedia.org/wiki/Monkey" target="_blank">here</a>.</p>
-        </header>
+        </section>
 
-        <!-- Alligators header -->
-        <header>
+        <!-- Alligators section -->
+        <section>
             <h2>Alligators</h2>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Chinese%2Bamerican_alligators.png/1024px-Chinese%2Bamerican_alligators.png" alt="" width="220">
             <!--List of names of alligators in zoo. -->
@@ -70,8 +70,8 @@
                 <li>Mika</li>
             </ul>
             <p>Alligators Facts: Alligators can go through a process called brumation, similar to hibernation. During colder months, they slow down their metabolism and become less active, often staying submerged in water with just their nostrils above the surface to breathe. This allows them to survive harsh winter conditions without eating for months. To learn more click <a href="https://en.wikipedia.org/wiki/Alligator" target="_blank">here</a>.</p>
-        </header>
-    </header>
+        </section>
+    </main>
 
 </body>
 </html>
